force-app/main/default/objects/Asset__c/Asset__c.object-meta.xml
<CustomObject>
    <label>Customer Asset</label>
    <nameField>
        <label>Engine Serial No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Assets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>