force-app/main/default/objects/Asset__c/fields/Alternator_Make__c.field-meta.xml
<CustomField>
    <fullName>Alternator_Make__c</fullName>
    <label>Alternator Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>