force-app/main/default/objects/Asset__c/fields/Alternator_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Alternator_Serial_No__c</fullName>
    <label>Alternator Serial No</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>