force-app/main/default/objects/Asset__c/fields/Applications__c.field-meta.xml
<CustomField>
    <fullName>Applications__c</fullName>
    <label>Applications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agricultural</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>DG Set</fullName>
            </value>
            <value>
                <fullName>Electric power</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Material Handling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>