force-app/main/default/objects/Asset__c/fields/AVR_model__c.field-meta.xml
<CustomField>
    <fullName>AVR_model__c</fullName>
    <label>AVR  Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>