force-app/main/default/objects/Asset__c/fields/Basic_Value__c.field-meta.xml
<CustomField>
    <fullName>Basic_Value__c</fullName>
    <label>Basic Value (INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>