force-app/main/default/objects/Asset__c/fields/Bill_To_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Code__c</fullName>
    <label>Bill To Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>