force-app/main/default/objects/Asset__c/fields/Control_Panel_Type__c.field-meta.xml
<CustomField>
    <fullName>Control_Panel_Type__c</fullName>
    <label>Control Panel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Control Panel</fullName>
            </value>
            <value>
                <fullName>AMF Control Panel</fullName>
            </value>
            <value>
                <fullName>Synchronizing Control Panel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>