force-app/main/default/objects/Asset__c/fields/Cooling_System__c.field-meta.xml
<CustomField>
    <fullName>Cooling_System__c</fullName>
    <label>Cooling System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Radiator</fullName>
            </value>
            <value>
                <fullName>Heat Exchanger</fullName>
            </value>
            <value>
                <fullName>Coil Cooler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>