force-app/main/default/objects/Asset__c/fields/Cooling_System_Make__c.field-meta.xml
<CustomField>
    <fullName>Cooling_System_Make__c</fullName>
    <label>Cooling System Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>