force-app/main/default/objects/Asset__c/fields/Credit_Period__c.field-meta.xml
<CustomField>
    <fullName>Credit_Period__c</fullName>
    <label>Credit Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>