force-app/main/default/objects/Asset__c/fields/Current_Running_Hours__c.field-meta.xml
<CustomField>
    <fullName>Current_Running_Hours__c</fullName>
    <label>Current Running Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>