force-app/main/default/objects/Asset__c/fields/Customer_Model__c.field-meta.xml
<CustomField>
    <fullName>Customer_Model__c</fullName>
    <label>Customer Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>