force-app/main/default/objects/Asset__c/fields/DG_Controller__c.field-meta.xml
<CustomField>
    <fullName>DG_Controller__c</fullName>
    <label>DG Controller</label>
    <length>255</length>
    <type>Text</type>
</CustomField>