force-app/main/default/objects/Asset__c/fields/DG_Set_Type__c.field-meta.xml
<CustomField>
    <fullName>DG_Set_Type__c</fullName>
    <label>DG Set Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Canopy</fullName>
            </value>
            <value>
                <fullName>Containerized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>