force-app/main/default/objects/Asset__c/fields/Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Date__c</fullName>
    <label>Customer Dispatch Date</label>
    <type>Date</type>
</CustomField>