force-app/main/default/objects/Asset__c/fields/Distance_from_Branch_in_KM__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_Branch_in_KM__c</fullName>
    <label>Distance from Branch in KM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>