force-app/main/default/objects/Asset__c/fields/Engine_Family_List__c.field-meta.xml
<CustomField>
    <fullName>Engine_Family_List__c</fullName>
    <label>Engine Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3.152 Series Engine</fullName>
            </value>
            <value>
                <fullName>4.236 Series Engine</fullName>
            </value>
            <value>
                <fullName>100 Series Engine</fullName>
            </value>
            <value>
                <fullName>400 Series Engine</fullName>
            </value>
            <value>
                <fullName>700 Series Engine</fullName>
            </value>
            <value>
                <fullName>800 Series Engine</fullName>
            </value>
            <value>
                <fullName>900 Series Engine</fullName>
            </value>
            <value>
                <fullName>1000 Series Engine</fullName>
            </value>
            <value>
                <fullName>1200 Series Engine</fullName>
            </value>
            <value>
                <fullName>1100 Series Engine</fullName>
            </value>
            <value>
                <fullName>1300 Series Engine</fullName>
            </value>
            <value>
                <fullName>1500 Series Engine</fullName>
            </value>
            <value>
                <fullName>1700 Series Engine</fullName>
            </value>
            <value>
                <fullName>2000 Series Engine</fullName>
            </value>
            <value>
                <fullName>3000 Series Engine</fullName>
            </value>
            <value>
                <fullName>4000 Series Engine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>