force-app/main/default/objects/Asset__c/fields/Engine_Model__c.field-meta.xml
<CustomField>
    <fullName>Engine_Model__c</fullName>
    <label>Engine Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D3.152</fullName>
            </value>
            <value>
                <fullName>4.236</fullName>
            </value>
            <value>
                <fullName>403A-15</fullName>
            </value>
            <value>
                <fullName>403C-15</fullName>
            </value>
            <value>
                <fullName>404C-22</fullName>
            </value>
            <value>
                <fullName>403D-15</fullName>
            </value>
            <value>
                <fullName>404D-22</fullName>
            </value>
            <value>
                <fullName>404D-22T</fullName>
            </value>
            <value>
                <fullName>404D-22TA</fullName>
            </value>
            <value>
                <fullName>704.30</fullName>
            </value>
            <value>
                <fullName>804D-33T</fullName>
            </value>
            <value>
                <fullName>1004-4</fullName>
            </value>
            <value>
                <fullName>1004-4T</fullName>
            </value>
            <value>
                <fullName>1006-6T</fullName>
            </value>
            <value>
                <fullName>1104C-44</fullName>
            </value>
            <value>
                <fullName>1104C-44TA</fullName>
            </value>
            <value>
                <fullName>1104D-44</fullName>
            </value>
            <value>
                <fullName>1104D-44T</fullName>
            </value>
            <value>
                <fullName>1104D-44TA</fullName>
            </value>
            <value>
                <fullName>1104D-E44T</fullName>
            </value>
            <value>
                <fullName>1104D-E44TA</fullName>
            </value>
            <value>
                <fullName>1106C-E60TA</fullName>
            </value>
            <value>
                <fullName>1106C-E66TA</fullName>
            </value>
            <value>
                <fullName>1106C-E70TA</fullName>
            </value>
            <value>
                <fullName>1106D-E66TA</fullName>
            </value>
            <value>
                <fullName>1106D-E70TA</fullName>
            </value>
            <value>
                <fullName>1306-9TG2</fullName>
            </value>
            <value>
                <fullName>1306-E87TA</fullName>
            </value>
            <value>
                <fullName>2006TAG2</fullName>
            </value>
            <value>
                <fullName>2206A-E13TAG3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>