force-app/main/default/objects/Asset__c/fields/EU_EP__c.field-meta.xml
<CustomField>
    <fullName>EU_EP__c</fullName>
    <label>EU/ EP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>EP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>