force-app/main/default/objects/Asset__c/fields/In_service_Date__c.field-meta.xml
<CustomField>
    <fullName>In_service_Date__c</fullName>
    <label>In service Date</label>
    <type>Date</type>
</CustomField>