force-app/main/default/objects/Asset__c/fields/Installed_Location__c.field-meta.xml
<CustomField>
    <fullName>Installed_Location__c</fullName>
    <label>Installed Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basement</fullName>
            </value>
            <value>
                <fullName>Canopy in Room</fullName>
            </value>
            <value>
                <fullName>DG Room</fullName>
            </value>
            <value>
                <fullName>Ground</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>