force-app/main/default/objects/Asset__c/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <label>Perkins Invoice No</label>
    <length>125</length>
    <type>Text</type>
</CustomField>