force-app/main/default/objects/Asset__c/fields/Last_Service_By_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_By_Engineer__c</fullName>
    <label>Last Service By (Engineer)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>