force-app/main/default/objects/Asset__c/fields/LR_No__c.field-meta.xml
<CustomField>
    <fullName>LR_No__c</fullName>
    <label>LR No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>