force-app/main/default/objects/Asset__c/fields/Net_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Net_Due_Date__c</fullName>
    <label>Net Due Date</label>
    <type>Date</type>
</CustomField>