force-app/main/default/objects/Asset__c/fields/OEM__c.field-meta.xml
<CustomField>
    <fullName>OEM__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>OEM</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>