force-app/main/default/objects/Asset__c/fields/OEM_Service_Branch__c.field-meta.xml
<CustomField>
    <fullName>OEM_Service_Branch__c</fullName>
    <label>OEM Service Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>