force-app/main/default/objects/Asset__c/fields/PM_Schedule__c.field-meta.xml
<CustomField>
    <fullName>PM_Schedule__c</fullName>
    <inlineHelpText>AMC . It’s a input field</inlineHelpText>
    <label>PM Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>