force-app/main/default/objects/Asset__c/fields/PO_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Date__c</fullName>
    <label>GOEM PO Date</label>
    <type>Date</type>
</CustomField>