force-app/main/default/objects/Asset__c/fields/PO_No__c.field-meta.xml
<CustomField>
    <fullName>PO_No__c</fullName>
    <label>GOEM PO No</label>
    <length>125</length>
    <type>Text</type>
</CustomField>