force-app/main/default/objects/Asset__c/fields/Powerparts_Service_Branch__c.field-meta.xml
<CustomField>
    <fullName>Powerparts_Service_Branch__c</fullName>
    <label>Powerparts Service Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>