force-app/main/default/objects/Asset__c/fields/PPP_Month__c.field-meta.xml
<CustomField>
    <fullName>PPP_Month__c</fullName>
    <inlineHelpText>At the time of MC Renewal.</inlineHelpText>
    <label>PPP Month</label>
    <length>125</length>
    <type>Text</type>
</CustomField>