force-app/main/default/objects/Asset__c/fields/Preservation_Done_Date__c.field-meta.xml
<CustomField>
    <fullName>Preservation_Done_Date__c</fullName>
    <label>Preservation Done Date</label>
    <type>Date</type>
</CustomField>