force-app/main/default/objects/Asset__c/fields/Preservation_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Preservation_Due_Date__c</fullName>
    <formula>ADDMONTHS(TODAY(),12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preservation Due Date</label>
    <type>Date</type>
</CustomField>