force-app/main/default/objects/Asset__c/fields/Rating_KVA_KWM__c.field-meta.xml
<CustomField>
    <fullName>Rating_KVA_KWM__c</fullName>
    <label>Rating (KVA/KWM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>