force-app/main/default/objects/Asset__c/fields/Running_Hours_Captured_Date__c.field-meta.xml
<CustomField>
    <fullName>Running_Hours_Captured_Date__c</fullName>
    <label>Running Hours Captured Date</label>
    <type>Date</type>
</CustomField>