force-app/main/default/objects/Asset__c/fields/Serviced_By__c.field-meta.xml
<CustomField>
    <fullName>Serviced_By__c</fullName>
    <label>Serviced By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PPL</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>GMMCO</fullName>
            </value>
            <value>
                <fullName>Both (PPL &amp; OEM)</fullName>
            </value>
            <value>
                <fullName>Customer, Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>