force-app/main/default/objects/Asset__c/fields/Shelf_Life_Date__c.field-meta.xml
<CustomField>
    <fullName>Shelf_Life_Date__c</fullName>
    <defaultValue>ADDMONTHS(today(),48)</defaultValue>
    <label>Shelf Life Date</label>
    <type>Date</type>
</CustomField>