force-app/main/default/objects/Asset__c/fields/Shelf_Life_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Shelf_Life_End_Date__c</fullName>
    <formula>Shelf_Life_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shelf Life End Date</label>
    <type>Date</type>
</CustomField>