force-app/main/default/objects/Asset__c/fields/Ship_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Address__c</fullName>
    <label>Ship to Address</label>
    <type>TextArea</type>
</CustomField>