force-app/main/default/objects/Asset__c/fields/Sub_Applications__c.field-meta.xml
<CustomField>
    <fullName>Sub_Applications__c</fullName>
    <label>Sub Applications</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Applications__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BANK SECTOR</fullName>
            </value>
            <value>
                <fullName>DEFENCE SECTOR</fullName>
            </value>
            <value>
                <fullName>EDUCATION AND RESEARCH INSTITUTIONS</fullName>
            </value>
            <value>
                <fullName>GOVERNMENT SECTOR</fullName>
            </value>
            <value>
                <fullName>HOSPITAL</fullName>
            </value>
            <value>
                <fullName>HOTEL, SHOPPING MALL AND TOURISM</fullName>
            </value>
            <value>
                <fullName>INFRASTRUCTURE, REALTY AND CONSTRUCTION</fullName>
            </value>
            <value>
                <fullName>IT AND TELECOM</fullName>
            </value>
            <value>
                <fullName>MANUFACTURING UNIT</fullName>
            </value>
            <value>
                <fullName>POWER GENERATION</fullName>
            </value>
            <value>
                <fullName>PRINT AND MEDIA</fullName>
            </value>
            <value>
                <fullName>PROCESSING (MEAT, MILK ETC) PLANTS</fullName>
            </value>
            <value>
                <fullName>RESIDENTIAL</fullName>
            </value>
            <value>
                <fullName>SHIPPING</fullName>
            </value>
            <value>
                <fullName>COMPRESSOR</fullName>
            </value>
            <value>
                <fullName>PAVERS</fullName>
            </value>
            <value>
                <fullName>WELDING MACHINE</fullName>
            </value>
            <value>
                <fullName>AGRI PUMP</fullName>
            </value>
            <value>
                <fullName>HARVESTOR</fullName>
            </value>
            <value>
                <fullName>TRACTOR</fullName>
            </value>
            <value>
                <fullName>ANODE TAPPING VEHICLE</fullName>
            </value>
            <value>
                <fullName>BACKHOE LOADER</fullName>
            </value>
            <value>
                <fullName>SIDE LOADER</fullName>
            </value>
            <value>
                <fullName>SKID STEER LOADER</fullName>
            </value>
            <value>
                <fullName>TELE HANDLER</fullName>
            </value>
            <value>
                <fullName>FORK LIFT TRUCK</fullName>
            </value>
            <value>
                <fullName>METAL TAPPING VEHICLE</fullName>
            </value>
            <value>
                <fullName>DG SET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>