force-app/main/default/objects/Asset__c/fields/Supported_by_Branch_RE__c.field-meta.xml
<CustomField>
    <fullName>Supported_by_Branch_RE__c</fullName>
    <label>Supported by Branch / RE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>