force-app/main/default/objects/Asset__c/validationRules/GOEM_PO_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>GOEM_PO_Date_is_Required</fullName>
    <active>false</active>
    <description>GOEM PO DATE is required when GOEM PO No have an value.</description>
    <errorConditionFormula>AND( NOT( ISBLANK( PO_No__c ) ) , ISBLANK( PO_Date__c ) )</errorConditionFormula>
    <errorDisplayField>PO_Date__c</errorDisplayField>
    <errorMessage>GOEM PO Date is Required</errorMessage>
</ValidationRule>