force-app/main/default/objects/Asset__c/validationRules/OEM_Account_End_User_should_be_OEMs_Cus.validationRule-meta.xml
<ValidationRule>
    <fullName>OEM_Account_End_User_should_be_OEMs_Cus</fullName>
    <active>false</active>
    <errorConditionFormula>text(OEM__r.Type) =&apos;OEM&apos; &amp;&amp; not(text(End_Customer__r.Type) =&apos;OEM’s Customer&apos;)</errorConditionFormula>
    <errorDisplayField>End_Customer__c</errorDisplayField>
    <errorMessage>End Customer should be OEM&apos;s Customer.</errorMessage>
</ValidationRule>