force-app/main/default/objects/Asset__c/validationRules/Perkins_Invoice_Date_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Perkins_Invoice_Date_is_required</fullName>
    <active>true</active>
    <description>Perkins Invoice Date is required when Perkins Invoice No have an value.</description>
    <errorConditionFormula>AND( NOT( ISBLANK(  Invoice_No__c ) ) , ISBLANK(  Invoice_Date__c ) )</errorConditionFormula>
    <errorDisplayField>Invoice_Date__c</errorDisplayField>
    <errorMessage>Perkins Invoice Date is required</errorMessage>
</ValidationRule>