force-app/main/default/objects/Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Engine_Model__c</columns>
    <columns>Engine_Family_List__c</columns>
    <columns>OEM__c</columns>
    <columns>End_Customer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>