force-app/main/default/objects/Asset__c/listViews/Service_Request_Queue_Asset.listView-meta.xml
<ListView>
    <fullName>Service_Request_Queue_Asset</fullName>
    <filterScope>Queue</filterScope>
    <label>Service Request Queue</label>
    <queue>Service_Request_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>